--- a/Emparejados/src/Vista/ConfirmacionSalirApp.fxml
+++ b/Emparejados/src/Vista/ConfirmacionSalirApp.fxml
@@ -5,12 +5,22 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="590.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorConfirmacionSalirApp">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="590.0" style="-fx-background-color: ffffff;" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorConfirmacionSalirApp">
    <children>
-      <Label layoutX="14.0" layoutY="26.0" prefHeight="31.0" prefWidth="488.0" styleClass="label2" stylesheets="@../application/estilo1.css" text="¿Está seguro de que quiere salir de la aplicación?" />
-      <Button fx:id="aceptar" layoutX="208.0" layoutY="119.0" mnemonicParsing="false" onAction="#aceptarHandler" prefHeight="48.0" prefWidth="175.0" stylesheets="@../application/estilo1.css" text="Aceptar" />
-      <Button fx:id="cancelar" layoutX="401.0" layoutY="119.0" mnemonicParsing="false" onAction="#cancelarHandler" prefHeight="48.0" prefWidth="175.0" stylesheets="@../application/estilo1.css" text="Cancelar" />
+      <Label layoutX="14.0" layoutY="26.0" prefHeight="31.0" prefWidth="488.0" text="¿Está seguro de que quiere salir de la aplicación?">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+      <Button fx:id="aceptar" layoutX="208.0" layoutY="119.0" mnemonicParsing="false" onAction="#aceptarHandler" prefHeight="48.0" prefWidth="175.0" text="Aceptar">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Button>
+      <Button fx:id="cancelar" layoutX="401.0" layoutY="119.0" mnemonicParsing="false" onAction="#cancelarHandler" prefHeight="48.0" prefWidth="175.0" text="Cancelar">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font></Button>
       <ImageView fitHeight="54.0" fitWidth="61.0" layoutX="502.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/icono_interrogante.png" />
