--- a/Emparejados/src/Vista/MenuPause.fxml
+++ b/Emparejados/src/Vista/MenuPause.fxml
@@ -3,25 +3,11 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="600.0" prefWidth="895.0" styleClass="fondoMenuPausa" stylesheets="@../application/estilo1.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPause">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="600.0" prefWidth="895.0" style="-fx-background-color: ffffff;" styleClass="fondoMenu" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuPause">
    <children>
-      <ImageView fx:id="imagePlay" fitHeight="152.0" fitWidth="159.0" layoutX="372.0" layoutY="253.0" onMouseClicked="#clickPlay" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imagenes/reanudar.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="imageHome" fitHeight="121.0" fitWidth="127.0" layoutX="180.0" layoutY="269.0" onMouseClicked="#clickHome" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imagenes/home.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="imageSound" fitHeight="133.0" fitWidth="137.0" layoutX="575.0" layoutY="271.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imagenes/sonido_on.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="118.0" fitWidth="412.0" layoutX="231.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="118.0" fitWidth="412.0" layoutX="242.0" layoutY="106.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/texto_pausa.png" />
          </image>
@@ -30,5 +16,32 @@
          <image>
             <Image url="@../imagenes/by_twinsoft.png" />
          </image></ImageView>
+      <StackPane fx:id="circuloHome" layoutX="162.0" layoutY="246.0" prefHeight="162.0" prefWidth="166.0" styleClass="fondoBoton" stylesheets="@../application/estiloAzul.css">
+         <children>
+            <ImageView fx:id="imageHome" fitHeight="121.0" fitWidth="127.0" onMouseClicked="#clickHome" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/home.png" />
+               </image>
+            </ImageView>
+         </children>
+      </StackPane>
+      <StackPane fx:id="circuloPlay" layoutX="371.0" layoutY="246.0" prefHeight="162.0" prefWidth="166.0" styleClass="fondoBoton" stylesheets="@../application/estiloAzul.css">
+         <children>
+            <ImageView fx:id="imagePlay" fitHeight="142.0" fitWidth="138.0" onMouseClicked="#clickPlay" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/reanudar.png" />
+               </image>
+            </ImageView>
+         </children>
+      </StackPane>
+      <StackPane fx:id="circuloSonido" layoutX="572.0" layoutY="246.0" prefHeight="162.0" prefWidth="166.0" styleClass="fondoBoton" stylesheets="@../application/estiloAzul.css">
+         <children>
+            <ImageView fx:id="imageSound" fitHeight="133.0" fitWidth="137.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/sonido_on.png" />
+               </image>
+            </ImageView>
+         </children>
+      </StackPane>
    </children>
 </Pane>
