--- a/Emparejados/src/Vista/EditorBarajaDorso.fxml
+++ b/Emparejados/src/Vista/EditorBarajaDorso.fxml
@@ -2,12 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.EditorBarajaDorsoController">
    <children>
       <Label alignment="CENTER" contentDisplay="TOP" layoutX="1.0" layoutY="8.0" prefHeight="55.0" prefWidth="600.0" text="TWINS">
          <font>
@@ -29,17 +28,5 @@
       <Button fx:id="siguienteButton" layoutX="431.0" layoutY="353.0" mnemonicParsing="false" onMouseClicked="#elegirParejas" text="Elegir Parejas" />
       <Button fx:id="cancelarButton" layoutX="339.0" layoutY="353.0" mnemonicParsing="false" onMouseClicked="#cancelar" text="Cancelar" />
       <Label fx:id="pathImagen" layoutX="228.0" layoutY="123.0" prefHeight="17.0" prefWidth="186.0" />
-      <Pane fx:id="nombrePane" disable="true" layoutX="158.0" layoutY="101.0" prefHeight="240.0" prefWidth="307.0">
-         <children>
-            <TextField fx:id="nombre" layoutX="84.0" layoutY="134.0" />
-            <Label layoutX="32.0" layoutY="63.0" text="Seleccione nombre para su nueva baraja:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Button fx:id="aceptarNombre" layoutX="242.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#aceptarNombre" text="Aceptar" />
-            <Button fx:id="cancelarNombre" layoutX="158.0" layoutY="200.0" mnemonicParsing="false" onMouseClicked="#cancelarNombre" text="Cancelar" />
-         </children>
-      </Pane>
    </children>
 </Pane>
