--- a/Emparejados/src/Vista/MenuAjustes.fxml
+++ b/Emparejados/src/Vista/MenuAjustes.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="557.0" prefWidth="882.0" style="-fx-background-color: ffffff;" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuAjustes">
+<AnchorPane fx:id="anchorPane" prefHeight="557.0" prefWidth="882.0" style="-fx-background-color: ffffff;" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuAjustes">
    <children>
       <ImageView fitHeight="535.0" fitWidth="882.0" layoutX="1.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="editorBarajas" layoutX="169.0" layoutY="441.0" mnemonicParsing="false" onAction="#editorBarajasHandler" prefHeight="54.0" prefWidth="246.0" text="EDITOR DE BARAJAS">
@@ -25,7 +25,7 @@
             </ImageView>
          </children>
       </StackPane>
-      <Label alignment="CENTER" layoutX="298.0" layoutY="76.0" prefHeight="136.0" prefWidth="291.0" stylesheets="@../application/estilo1.css" text="AJUSTES">
+      <Label alignment="CENTER" layoutX="298.0" layoutY="40.0" prefHeight="136.0" prefWidth="291.0" stylesheets="@../application/estilo1.css" text="AJUSTES">
          <font>
             <Font name="System Bold" size="60.0" />
          </font></Label>
@@ -55,6 +55,11 @@
          </font></Button>
       <ChoiceBox fx:id="barajaPartida" layoutX="482.0" layoutY="377.0" prefHeight="35.0" prefWidth="188.0" />
       <Label alignment="CENTER" layoutX="494.0" layoutY="338.0" prefHeight="30.0" prefWidth="165.0" text="BARAJA PARTIDA" underline="true">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="327.0" layoutY="189.0" prefHeight="30.0" prefWidth="229.0" text="SELECCION DE MUSICA" underline="true">
          <font>
             <Font size="16.0" />
          </font>
