Añadido el boton de cancelar y volver en ajustes. Tambien esta completamente implementado

--- a/Emparejados/src/Vista/MenuAjustes.fxml
+++ b/Emparejados/src/Vista/MenuAjustes.fxml
@@ -12,7 +12,7 @@
 <AnchorPane fx:id="anchorPane" prefHeight="557.0" prefWidth="882.0" style="-fx-background-color: ffffff;" stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorMenuAjustes">
    <children>
       <ImageView fitHeight="535.0" fitWidth="882.0" layoutX="1.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="editorBarajas" layoutX="169.0" layoutY="441.0" mnemonicParsing="false" onAction="#editorBarajasHandler" prefHeight="54.0" prefWidth="246.0" text="EDITOR DE BARAJAS">
+      <Button fx:id="editorBarajas" layoutX="52.0" layoutY="441.0" mnemonicParsing="false" onAction="#editorBarajasHandler" prefHeight="54.0" prefWidth="246.0" text="EDITOR DE BARAJAS">
          <font>
             <Font name="System Bold" size="20.0" />
          </font></Button>
@@ -49,7 +49,7 @@
             <Font size="16.0" />
          </font></Label>
       <ChoiceBox fx:id="tema" layoutX="262.0" layoutY="377.0" prefHeight="35.0" prefWidth="118.0" />
-      <Button fx:id="salir" layoutX="469.0" layoutY="441.0" mnemonicParsing="false" onAction="#salirHandler" prefHeight="54.0" prefWidth="240.0" text="APLICAR Y VOLVER">
+      <Button fx:id="salir" layoutX="324.0" layoutY="441.0" mnemonicParsing="false" onAction="#salirHandler" prefHeight="54.0" prefWidth="240.0" text="APLICAR Y VOLVER">
          <font>
             <Font name="System Bold" size="20.0" />
          </font></Button>
@@ -64,5 +64,10 @@
             <Font size="16.0" />
          </font>
       </Label>
+      <Button fx:id="cancelarySalir" layoutX="593.0" layoutY="441.0" mnemonicParsing="false" onAction="#cancelarYSalirHandler" prefHeight="54.0" prefWidth="240.0" text="CANCELAR Y VOLVER">
+         <font>
+            <Font name="System Bold" size="20.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
