Arreglado bug partida por carta y estilo rojo.

--- a/Emparejados/src/application/estiloRojo.css
+++ b/Emparejados/src/application/estiloRojo.css
@@ -40,6 +40,12 @@
 	-fx-border-width: 5;
 }
 
+.label{
+	-fx-font-weight: bold;
+	-fx-background-color: white;
+	-fx-background-radius: 30;
+	-fx-text-fill: red;
+}
 
 .label2{
 	-fx-font-weight: bold;
